# citas_medicas

./: .gitignore  Dockerfile  INSTALL.md  README.md  docker-compose.yml  env  pyproject.toml  requirements.txt
apps/accounts/: admin.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0002_planpayment.py  0003_company_clinic_limit_plan_max_clinics.py
apps/accounts/models/: __init__.py  company.py  plan.py  plan_payment.py  role.py  user.py  user_log.py
apps/accounts/serializers/: admin.py  serializers.py
apps/accounts/utils/: email.py
apps/accounts/views/: admin.py  views.py
apps/appointments/: admin.py  models.py  serializers.py  views.py
apps/appointments/migrations/: 0001_initial.py  0002_alter_appointment_options_and_more.py
apps/audit/: admin.py  middleware.py  models.py  services.py
apps/audit/migrations/: 0001_initial.py  (+1 more)
apps/chat/: models.py  serializers.py  services.py  urls.py  views.py
apps/clinics/: admin.py  models.py  serializers.py  urls.py  views.py
apps/common/: models.py
apps/doctors/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: TESTING_GUIDE.md  admin.py  apps.py  models.py  services.py  signals.py  templates.py  urls.py  views.py  views_test.py
apps/patients/: admin.py  models.py  serializers.py  urls.py  views.py
apps/s3/: s3_services.py
apps/schedules/: admin.py  models.py  serializers.py  urls.py  views.py
project/: settings.py  settings_db.py  urls.py
(+23 files in other folders)
